deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muyapp-deployment
  labels:
    tier: front-end
    app: nginx
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      name: nginx-2
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx
          image: nginx
